--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -14,7 +14,7 @@
   top: 0;
   left: 0;
   transform: translate(-50%, -50%);
-  @media all and (max-width: 780px) {
+  @media all and (max-width: 1180px) {
     width: 50px;
     height: 50px;
   }
@@ -24,8 +24,8 @@
   max-width: 80vw;
 }
 .image {
-  width: 812px;
-  @media all and (max-width: 1080px) {
+  //width: 812px;
+  @media all and (max-width: 1180px) {
     width: 70vw;
   }
 }
@@ -37,8 +37,8 @@
 }
 .text {
   font-size: 40px;
-  margin-top: -30px;
-  @media all and (max-width: 780px) {
+  margin-top: -50px;
+  @media all and (max-width: 1180px) {
     font-size: 14px;
     margin-top: 0;
   }
