--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
   top: 0;
   transition: height .4s;
   z-index: 100;
-  min-width: $websiteMinWidth;
+  min-width: 400px;
 }
 .wrap {
   display: flex;
@@ -33,6 +33,9 @@
 .menu {
   margin-left: 48px;
   font-size: 13px;
+  @media all and (max-width: 699px){
+    display: none;
+  }
   ul {
     list-style: none;
     padding: 0;
