--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -21,6 +21,7 @@
   justify-content: center;
   text-align: center;
   img {
+    position: relative;
     width: calc(100% - 20px);
     max-width: 912px;
     display: block;
