--- a/src/components/Downloads/Downloads.module.scss
+++ b/src/components/Downloads/Downloads.module.scss
@@ -1,7 +1,6 @@
 @import 'src/variables';
 
 .root {
-  min-width: $websiteMinWidth;
   min-height: calc(100vh - #{$headerHeight});
   position: relative;
   display: flex;
@@ -10,6 +9,9 @@
   text-align: left;
   background-color: $appBlue;
   box-shadow: 0 -2px 6px 0 rgba(0,0,0,.12), inset 0 1px 0 0 #dadce0;
+  @media all and (max-width: 799px) {
+    display: none;
+  }
 }
 .wrap {
   text-align: center;
