--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -7,7 +7,7 @@
   background-color: #fff;
 }
 .imagePadding {
-  padding-top: 750px;
+  padding-top: 400px;
   @media all and (max-width: 799px) {
     display: none;
   }
@@ -23,33 +23,34 @@
   justify-content: center;
   text-align: center;
   @media all and (max-width: 799px) {
+    height: auto;
     position: relative;
     top: 0;
     left: 0;
-    margin-top: $headerHeight;
-    height: auto;
-    padding: 45px 0 0;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    margin-top: $headerHeight;
+    padding: 45px 0 0;
   }
   img {
-    position: relative;
     width: calc(100% - 20px);
+    max-height: 80vh;
     max-width: 912px;
+    position: relative;
     display: block;
     object-fit: contain;
     transform: translate3d(0, 0, 0);
   }
 }
 .block {
-  padding: 150px 0 200px 50%;
+  padding: 90px 0 200px 50%;
   @media all and (max-width: 799px) {
-    padding: 0 20px 50px;
     display: flex;
+    align-items: center;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding: 0 20px 50px;
   }
 }
 .title {
@@ -60,7 +61,7 @@
   }
 }
 .titleDesc {
-  margin-top: 10px;
+  margin: 10px auto 20px;
   font-size: 24px;
   font-weight: 300;
   @media all and (max-width: 930px){
@@ -71,7 +72,7 @@
   max-width: 40vw;
   display: flex;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 20px;
   font-size: 18px;
   @media all and (max-width: 930px){
     font-size: 13px;
