--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -7,7 +7,10 @@
   background-color: #fff;
 }
 .imagePadding {
-  padding-top: 400px;
+  padding-top: 750px;
+  @media all and (max-width: 1440px){
+    padding-top: 400px;
+  }
   @media all and (max-width: 799px) {
     display: none;
   }
@@ -44,7 +47,10 @@
   }
 }
 .block {
-  padding: 90px 0 200px 50%;
+  padding: 260px 0 200px 50%;
+  @media all and (max-width: 1440px){
+    padding: 130px 0 200px 50%;
+  }
   @media all and (max-width: 799px) {
     display: flex;
     align-items: center;
@@ -61,7 +67,7 @@
   }
 }
 .titleDesc {
-  margin: 10px auto 20px;
+  margin: 10px auto 40px;
   font-size: 24px;
   font-weight: 300;
   @media all and (max-width: 930px){
@@ -74,6 +80,9 @@
   align-items: center;
   margin-top: 20px;
   font-size: 18px;
+  @media all and (max-width: 1440px){
+    font-size: 16px;
+  }
   @media all and (max-width: 930px){
     font-size: 13px;
   }
