--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -47,7 +47,7 @@
   }
 }
 .block {
-  padding: 260px 0 200px 50%;
+  padding: 200px 0 200px 50%;
   @media all and (max-width: 1440px){
     padding: 130px 0 200px 50%;
   }
@@ -74,13 +74,14 @@
     font-size: 16px;
   }
 }
-.text {
+.featureItem {
   max-width: 40vw;
   display: flex;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 30px;
   font-size: 18px;
   @media all and (max-width: 1440px){
+    margin-top: 20px;
     font-size: 16px;
   }
   @media all and (max-width: 930px){
@@ -91,8 +92,15 @@
     text-align: left;
   }
 }
+.iconWrap {
+  transform-origin: center center;
+  position: relative;
+}
 .icon {
-  margin-right: 15px;
+
+}
+.featureText {
+  margin-left: 15px;
 }
 
 
