--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -23,7 +23,7 @@
   top: 100%;
   left: 24px;
   transform: translateY(-50%);
-  height: 70px;
+  width: 70px;
 }
 .logoText {
   margin-left: 110px;
