--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -4,7 +4,7 @@
   min-height: calc(100vh - #{$headerHeight});
   position: relative;
   text-align: left;
-  background-color: #fff;
+  //background-color: #fff;
 }
 .imagePadding {
   padding-top: 750px;
