--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -4,7 +4,6 @@
   min-height: calc(100vh - #{$headerHeight});
   position: relative;
   text-align: left;
-  //background-color: #fff;
 }
 .imagePadding {
   padding-top: 750px;
@@ -68,6 +67,35 @@
   @media all and (max-width: 930px){
     font-size: 20px;
   }
+}
+.titleName {
+  display: flex;
+  align-items: center;
+  height: 49px;
+  overflow: hidden;
+  position: relative;
+}
+@keyframes flip4 {
+  0% { transform: translate3d(0, -40%, 0); }
+  5% { transform: translate3d(0, -20%, 0); }
+  25% { transform: translate3d(0, -20%, 0); }
+  30% { transform: translate3d(0, 0, 0); }
+  50% { transform: translate3d(0, 0, 0); }
+  55% { transform: translate3d(0, 20%, 0); }
+  75% { transform: translate3d(0, 20%, 0); }
+  80% { transform: translate3d(0, 40%, 0); }
+  99.99% { transform: translate3d(0, 40%, 0); }
+  100% { transform: translate3d(0, -40%, 0); }
+}
+.flip {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: flex;
+  transform: translate3d(0, -40%, 0);
+  justify-content: flex-start;
+  flex-direction: column;
+  animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
 }
 .logo {
   height: 60px;
