--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -7,7 +7,7 @@
 }
 .imagePadding {
   padding-top: 750px;
-  @media all and (max-width: 1440px){
+  @media all and (max-width: 1440px) {
     padding-top: 400px;
   }
   @media all and (max-width: 799px) {
@@ -37,7 +37,7 @@
   }
   img {
     width: calc(100% - 20px);
-    max-height: 80vh;
+    max-height: 712px;
     max-width: 912px;
     position: relative;
     display: block;
@@ -47,7 +47,7 @@
 }
 .block {
   padding: 160px 0 200px 50%;
-  @media all and (max-width: 1440px){
+  @media all and (max-width: 1440px) {
     padding: 180px 0 200px 50%;
   }
   @media all and (max-width: 799px) {
@@ -59,12 +59,11 @@
   }
 }
 
-
 .titleDesc {
   margin: 10px auto 0;
   font-size: 24px;
   font-weight: 300;
-  @media all and (max-width: 930px){
+  @media all and (max-width: 930px) {
     font-size: 15px;
     margin-bottom: 10px;
   }
@@ -77,7 +76,7 @@
   span {
     display: inline-block;
     margin: 0 5px;
-    opacity: .3;
+    opacity: 0.3;
   }
 }
 .featureItem {
@@ -86,11 +85,11 @@
   align-items: center;
   margin-top: 30px;
   font-size: 16px;
-  @media all and (max-width: 1440px){
+  @media all and (max-width: 1440px) {
     margin-top: 20px;
     font-size: 16px;
   }
-  @media all and (max-width: 930px){
+  @media all and (max-width: 930px) {
     font-size: 13px;
   }
   @media all and (max-width: 799px) {
@@ -103,16 +102,14 @@
   position: relative;
 }
 .icon {
-
 }
 .featureText {
   margin-left: 15px;
 }
 
-
 :global {
   #page2 {
     background-color: $appBlue;
-    box-shadow: 0 -2px 6px 0 rgba(0,0,0,.12), inset 0 1px 0 0 #dadce0;
+    box-shadow: 0 -2px 6px 0 rgba(0, 0, 0, 0.12), inset 0 1px 0 0 #dadce0;
   }
 }
