feat: small changes

--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -42,7 +42,12 @@
     position: relative;
     display: block;
     object-fit: contain;
+
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
+    image-rendering: optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
   }
 }
 .block {
