--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -4,14 +4,15 @@
   justify-content: flex-start;
   font-size: 40px;
   font-weight: 300;
-  @media all and (max-width: 930px){
+  @media all and (max-width: 930px) {
     font-size: 20px;
   }
 }
 .logo {
   height: 60px;
+  width: 60px;
   margin-right: 10px;
-  @media all and (max-width: 930px){
+  @media all and (max-width: 930px) {
     display: none;
   }
 }
@@ -21,21 +22,41 @@
   height: 49px;
   overflow: hidden;
   position: relative;
-  @media all and (max-width: 930px){
+  @media all and (max-width: 930px) {
     height: 29px;
   }
 }
 @keyframes flip4 {
-  0% { transform: translate3d(0, -40%, 0); }
-  5% { transform: translate3d(0, -20%, 0); }
-  25% { transform: translate3d(0, -20%, 0); }
-  30% { transform: translate3d(0, 0, 0); }
-  50% { transform: translate3d(0, 0, 0); }
-  55% { transform: translate3d(0, 20%, 0); }
-  75% { transform: translate3d(0, 20%, 0); }
-  80% { transform: translate3d(0, 40%, 0); }
-  99.99% { transform: translate3d(0, 40%, 0); }
-  100% { transform: translate3d(0, -40%, 0); }
+  0% {
+    transform: translate3d(0, -40%, 0);
+  }
+  5% {
+    transform: translate3d(0, -20%, 0);
+  }
+  25% {
+    transform: translate3d(0, -20%, 0);
+  }
+  30% {
+    transform: translate3d(0, 0, 0);
+  }
+  50% {
+    transform: translate3d(0, 0, 0);
+  }
+  55% {
+    transform: translate3d(0, 20%, 0);
+  }
+  75% {
+    transform: translate3d(0, 20%, 0);
+  }
+  80% {
+    transform: translate3d(0, 40%, 0);
+  }
+  99.99% {
+    transform: translate3d(0, 40%, 0);
+  }
+  100% {
+    transform: translate3d(0, -40%, 0);
+  }
 }
 .flip {
   position: relative;
