--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import "src/variables";
+@use "../../variables" as vars;
 
 .root {
   left: 0;
@@ -15,7 +15,7 @@
   align-items: center;
   background-color: #fff;
   box-shadow: 0 2px 6px 0 rgba(0,0,0,0.12), inset 0 -1px 0 0 #dadce0;
-  height: $headerHeight;
+  height: vars.$headerHeight;
   position: relative;
 }
 .logo {
