refactor: removed unused code

--- a/src/components/Downloads/Downloads.module.scss
+++ b/src/components/Downloads/Downloads.module.scss
@@ -8,7 +8,9 @@
   justify-content: center;
   text-align: left;
   background-color: vars.$appBlue;
-  box-shadow: 0 -2px 6px 0 rgba(0,0,0,.12), inset 0 1px 0 0 #dadce0;
+  box-shadow:
+    0 -2px 6px 0 rgba(0, 0, 0, 0.12),
+    inset 0 1px 0 0 #dadce0;
   @media all and (max-width: 799px) {
     display: none;
   }
