--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -115,6 +115,8 @@
 :global {
   #page2 {
     background-color: vars.$appBlue;
-    box-shadow: 0 -2px 6px 0 rgba(0, 0, 0, 0.12), inset 0 1px 0 0 #dadce0;
+    box-shadow:
+      0 -2px 6px 0 rgba(0, 0, 0, 0.12),
+      inset 0 1px 0 0 #dadce0;
   }
 }
